<resources>
    <string name="app_name">诚享钱包</string>
    <string name="appname">CXW</string>

    <string name="cancel"><![CDATA[取 消]]></string>
    <string name="success"><![CDATA[确 定]]></string>
    <string name="download_new_version">正在下载最新版本……</string>
    <string name="register">注册</string>
    <string name="input_your_mobile_phone_number">请输入您的手机号</string>
    <string name="input_password">请输入您的密码</string>
    <string name="input_password_again">请确认您的密码</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login"><![CDATA[登  录]]></string>
    <string name="sign_in">登录</string>
    <string name="get_identifying_code">获取验证码</string>
    <string name="enter_sms_verification_code">请输入短信验证码</string>
    <string name="enter_invite_phone">邀请人手机号（选填）</string>
    <string name="home">首页</string>
    <string name="profit">收益</string>
    <string name="more_service">更多服务</string>
    <string name="mine">我的</string>
    <string name="phone_188888888">188888888</string>
    <string name="referee_18888888888">推荐人：18888888888</string>
    <string name="staff">员工</string>
    <string name="mine_real_name">实名认证(我的资料)</string>
    <string name="mine_setting">关于/设置</string>
    <string name="user_info">用户资料</string>
    <string name="bank_card_data">银行卡信息</string>
    <string name="photo_data">照片信息</string>
    <string name="mine_bill">我的账单</string>
    <string name="mine_extension_code">我要推广</string>
    <string name="mine_client">我的客户</string>
    <string name="mine_up_grade">提升等级</string>
    <string name="mine_change_bank_card">银行卡</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="safe_exit">安全退出</string>
    <string name="check_upgrade">检查更新</string>
    <string name="description_of_products">使用说明</string>
    <string name="voice_broadcast">收款语音播报</string>
    <string name="imperfect">未完善</string>
    <string name="email">zhyewu@qdcftx.com</string>
    <string name="hot_line">4006078827</string>
    <string name="qq_number">957530956</string>

    <string name="photo_request">照片要求</string>
    <string name="id_card_require">开户人需持有本人有效二代身份证；</string>
    <string name="id_card_bank_require">开户人身份证和银行储蓄卡、信用卡需保持一致；</string>
    <string name="take_photo_require">拍摄照片时需确保身份证边框完整、字体清晰、 亮度均匀。</string>
    <string name="upload"><![CDATA[上  传]]></string>
    <string name="real_name">真实姓名</string>
    <string name="real_name_hint">必须与您的银行卡户名一致</string>
    <string name="merchant_name">商户名称</string>
    <string name="merchant_name_hint">请输入商户名称</string>
    <string name="id_card"><![CDATA[身  份  证]]></string>
    <string name="id_card_hint">请输入证件号码</string>
    <string name="bank_card_number">银行卡号</string>
    <string name="bank_card_number_hint">请填写储蓄卡卡号</string>
    <string name="phone_number">手机号码</string>
    <string name="bank_phone_number">请填写储蓄卡银行预留手机号</string>
    <string name="opening_bank"><![CDATA[开  户  行]]></string>
    <string name="opening_bank_hint">请选择储蓄卡对应的开户银行</string>
    <string name="credit_card_number">信用卡号</string>
    <string name="credit_card_bank_phone_number">请填写信用卡银行预留手机号</string>
    <string name="credit_card_number_hint">请填写本人的信用卡卡号</string>
    <string name="user_info_tips">注：提交前请仔细检查您的身份证号、储蓄卡号和信用卡号</string>
    <string name="submit"><![CDATA[提  交]]></string>
    <string name="camera_permission_required">本功能需要相机权限！</string>
    <string name="no_data">暂无数据</string>
    <string name="level">级别：</string>
    <string name="current_profit">当前本月收益：— 费率：—</string>
    <string name="hint">提示：</string>
    <string name="user_upgrade_hint1">1、预计下月收益仅是本月交易额推断下月可能带来的收益。本预测不可视为保证收益依据，仅供参考。</string>
    <string name="user_upgrade_hint2">2、有效用户为完善用户资料并通过审核的用户。</string>
    <string name="staff_upgrade_manager">员工升级店长</string>
    <string name="next_month_profit">预计下月收益：300</string>
    <string name="user_upgrade_choice">用户升级条件(二选一)：</string>
    <string name="condition1">1、累计推荐有效用户数5人；</string>
    <string name="condition2">2、缴纳100元,自动升级为店长</string>
    <string name="highest_rank">已升级到最高等级</string>
    <string name="upgrade"><![CDATA[升 级]]></string>
    <string name="want_share">我要推广</string>
    <string name="rmb_30000">30000元</string>
    <string name="share"><![CDATA[分 享]]></string>
    <string name="kindly_reminder">温馨提示</string>

    <string name="extension_top">诚享钱包，数十万商户的共同选择</string>
    <string name="extension_bottom">将诚享钱包APP分享到朋友圈或社交网络，可以让更多的商户免费注册</string>
    <string name="scan_registration">扫描二维码，快速注册商户</string>
    <string name="extension_immediately">立即推广</string>
    <string name="wechat">微信</string>
    <string name="ali_pay">支付宝</string>

    <string name="send_success">发送成功</string>
    <string name="send_cancel">发送取消</string>
    <string name="validation_failure">权限验证失败</string>
    <string name="unknown_error">未知错误</string>
    <string name="send_failure">发送失败</string>
    <string name="search">搜索</string>
    <string name="china_bank">中国银行</string>
    <string name="bank_card_num">62139999999999999</string>
    <string name="bind_hint">*请绑定本人名下的信用卡</string>
    <string name="own_bank">所属银行</string>
    <string name="credit_card_bank">请输入信用卡对应银行</string>
    <string name="data">2017–07</string>
    <string name="effective_transaction">有效交易</string>
    <string name="loading">加载中，请稍后…</string>
    <string name="load_complete">数据加载完成</string>
    <string name="trade_time">交易时间：</string>
    <string name="account_time">预计到账时间：</string>
    <string name="order_id">订单号：</string>
    <string name="fee">交易手续费：</string>
    <string name="cash_flow_state">出款状态：</string>
    <string name="settlement_amt">结算金额：</string>
    <string name="detail_card">结算卡号：</string>
    <string name="bank_info">结算银行信息：</string>
    <string name="settlement_state">结算状态：</string>
    <string name="bank_crash_flow">请勿以短信到账为凭据，查账需提供银行流水或账单。</string>
    <string name="total_amount">累计交易金额</string>
    <string name="time">2017–07–19 14:40:50</string>
    <string name="message_title">消息标题</string>
    <string name="select_all">全选</string>
    <string name="as_read">标为已读</string>
    <string name="delete">删除</string>
    <string name="or">or</string>
    <string name="wechat_login">微信登录</string>
    <string name="guide_in">立即体验</string>
    <string name="user_agreement">《诚享钱包用户注册协议》</string>
    <string name="all">全部</string>
    <string name="cash_register">提现到银行卡</string>
    <string name="receive">收款</string>
    <string name="convenience_payment">便民缴费</string>
    <string name="shanghai">上海</string>
    <string name="gu_ma">固码</string>
    <string name="union_pay">快捷支付</string>
    <string name="quick_collection">快速收款</string>
    <string name="ordinary_collection">普通收款</string>
    <string name="gu_ma_hint">出示您的二维码，由消费者使用微信或支付宝扫描此二维码进行支付，仅限当面使用</string>
    <string name="amount_0">￥0.00</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="double_zero">00</string>
    <string name="confirm_pay">确定支付</string>
    <string name="cashier_desk">诚享钱包收银台</string>
    <string name="china_union">中国银联（绑卡支付）</string>
    <string name="choice">请选择</string>
    <string name="add">添加</string>
    <string name="balance_of_account">账户余额（元）</string>
    <string name="cash_out">可提现（元）</string>
    <string name="for_income">待收入（元）</string>
    <string name="improve_earnings">提升收益</string>
    <string name="month_income">本月收益</string>
    <string name="develop_people">拓展人</string>
    <string name="tab_profit_account_balance">账户余额</string>
    <string name="tab_profit_cumulative_development">我的客户</string>
    <string name="tab_profit_month_income">本月收益</string>
    <string name="tab_profit_improve_earnings">提升收益</string>
    <string name="apply_time">申请时间</string>
    <string name="transfer_time">划款时间</string>
    <string name="transfer_amt">划款金额</string>
    <string name="withdraw_cash_amt">提现金额</string>
    <string name="withdraw_cash_fee_amt">提现手续费</string>
    <string name="withdraw_cash_state">提现状态</string>
    <string name="withdraw_cash_record">提现记录</string>
    <string name="withdraw_cash_control">每笔结算金额最低—元，最高—元，提现手续费—元。提现资金将汇入您的结算账户。</string>
    <string name="withdraw_cash_amount">输入提现金额</string>
    <string name="withdraw">确认提现</string>
    <string name="want_upgrade">我要升级</string>
    <string name="signature_block">为保证您的合法权益，请您使用正楷签名</string>
    <string name="sign_there">请在此处签名：</string>
    <string name="sign_again">重新书写</string>
    <string name="chinese_develop">正在开发中…</string>
    <string name="english_develop">Developing…</string>
    <string name="back_one_type">返回上一步</string>
    <string name="sign_immediately">立即签订</string>
    <string name="profit_500">直接交易分润:500</string>
    <string name="upgrade_profit">升级分润</string>
    <string name="trading_profit">交易分润</string>
    <string name="call_hot_line">拨打客服电话</string>
    <string name="request_permission_camera">需要照相权限，以正常使用拍照功能</string>
    <string name="request_permission_camera_again">在设置-应用-诚享钱包-权限中开启相机权限，以正常使用拍照功能</string>
    <string name="request_permission_storage">需要访问手机存储权限</string>
    <string name="request_permission_storage_again">在设置-应用-诚享钱包-权限中开启手机存储权限，以正常使用APP相关功能</string>
</resources>
