<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@android:color/white"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_weight="0.91"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/text_black_15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/cash_register" />

        <TextView
            android:id="@+id/withdraw_cash_bean_apply_time_tv"
            style="@style/text_gray_13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/apply_time" />

        <TextView
            android:id="@+id/withdraw_cash_bean_transfer_time_tv"
            style="@style/text_gray_13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/transfer_time" />

        <TextView
            android:id="@+id/withdraw_cash_bean_transfer_amt_tv"
            style="@style/text_gray_13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/transfer_amt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/withdraw_cash_bean_amt_tv"
            style="@style/text_theme_13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_cash_amt" />

        <TextView
            android:id="@+id/withdraw_cash_bean_fee_amt_tv"
            style="@style/text_gray_13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/withdraw_cash_fee_amt" />

        <TextView
            android:id="@+id/withdraw_cash_bean_state_tv"
            style="@style/text_theme_13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/withdraw_cash_state" />

    </LinearLayout>


</LinearLayout>