<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.chengxiang.pay.fragment.UserInfoBankDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:background="@android:color/white"
        android:divider="@color/colorDividers"
        android:orientation="vertical"
        android:showDividers="end">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_black_15dp"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical|right"
                android:text="@string/real_name" />

            <EditText
                android:id="@+id/my_info_true_name_et"
                style="@style/text_black_15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/real_name_hint"
                android:imeOptions="actionNext"
                android:maxLines="1" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="15dp"
            android:background="@color/colorDividers" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_black_15dp"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical|right"
                android:text="@string/merchant_name" />

            <EditText
                android:id="@+id/my_info_merchant_name_et"
                style="@style/text_black_15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/merchant_name_hint"
                android:imeOptions="actionNext"
                android:maxLines="1" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="15dp"
            android:background="@color/colorDividers" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_black_15dp"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical|right"
                android:text="@string/id_card" />

            <com.chengxiang.pay.framework.custom.CustomEditText
                android:id="@+id/my_info_id_card_cet"
                style="@style/text_black_15dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/id_card_hint"
                android:imeOptions="actionNext"
                app:editType="numberIdCard" />

            <ImageView
                android:id="@+id/my_info_id_card_iv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@mipmap/ic_user_info_photograph" />
        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:divider="@color/colorDividers"
        android:orientation="vertical"
        android:showDividers="end|beginning">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_black_15dp"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical|right"
                android:text="@string/bank_card_number" />

            <com.chengxiang.pay.framework.custom.CustomEditText
                android:id="@+id/my_info_bank_card_cet"
                style="@style/text_black_15dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/bank_card_number_hint"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                app:editType="numberBankCard" />

            <ImageView
                android:id="@+id/my_info_bank_card_iv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@mipmap/ic_user_info_photograph" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="15dp"
            android:background="@color/colorDividers" />

        <LinearLayout
            android:id="@+id/my_info_bank_phone_ll"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_black_15dp"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical|right"
                android:text="@string/phone_number" />

            <com.chengxiang.pay.framework.custom.CustomEditText
                android:id="@+id/my_info_bank_phone_cet"
                style="@style/text_black_15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/bank_phone_number"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                app:editType="numberPhone" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="15dp"
            android:background="@color/colorDividers" />

        <LinearLayout
            android:id="@+id/my_info_bank_name_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="44dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_black_15dp"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical|right"
                android:text="@string/opening_bank" />

            <TextView
                android:id="@+id/my_info_bank_name_tv"
                style="@style/text_black_15dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/opening_bank_hint" />

            <ImageView
                android:layout_width="12dp"
                android:layout_height="match_parent"
                android:layout_marginRight="12dp"
                android:src="@mipmap/ic_arrow_right" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="15dp"
            android:background="@color/colorDividers" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:id="@+id/my_info_credit_card_ll"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@android:color/white"
        android:divider="@color/colorDividers"
        android:orientation="horizontal"
        android:showDividers="end|beginning">

        <TextView
            style="@style/text_black_15dp"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical|right"
            android:text="@string/credit_card_number" />

        <com.chengxiang.pay.framework.custom.CustomEditText
            android:id="@+id/my_info_credit_card_cet"
            style="@style/text_black_15dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/credit_card_number_hint"
            android:inputType="number"
            app:editType="numberBankCard" />

        <ImageView
            android:id="@+id/my_info_credit_card_iv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@mipmap/ic_user_info_photograph" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/mine_data_prompt_tv"
        style="@style/text_theme_13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/user_info_tips" />

    <Button
        android:id="@+id/mine_data_btn_submit"
        style="@style/text_white_18dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="26dp"
        android:background="@drawable/selector_button_theme_8"
        android:text="@string/submit" />

</LinearLayout>
